# burn-after-reading

./: .dockerignore  .gitignore  Crypto.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  Procfile  README.md  SECURITY.md  debug.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: codeql-analysis.yml  docker-publish.yml  test.yml
burn/: api.py  cleaner.py  server.py  storage.py  wsgi.py
burn/static/: burn.css  burn.js
burn/templates/: 404.html  about.html  index.html  layout.html  open.html
burn/tests/: storage_test.py
docker_files/: gunicorn_conf.py  uwsgi.ini
test/: test_integration.py  test_storage.py
web/burn-web-client/: README.md  index.html  package-lock.json  package.json
web/burn-web-client/src/: App.vue
web/burn-web-client/src/assets/: main.css
web/burn-web-client/src/router/: index.js
web/burn-web-client/src/views/: AboutView.vue  PaperView.vue
